# Simple-Python-Calculator

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: index.md
search/: search_index.json
site/: objects.inv
site/search/: search_index.json
src/calculator/: calculator.py
tests/: __init__.py  test_calculator.py
