[project]
name = "simple-calculator-groupthree"
version = "0.1.0"
description = "A simple Python calculator"
authors = [{name = "Adaure", email = "aduray49@gmail.com"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = []
keywords = ["calculator", "python", "math"]
license = { text = "MIT" }

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]